k8s/access-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-deployment
  namespace: ldschurch-stream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: access
  template:
    metadata:
      labels:
        app: access
    spec:
      containers:
        - name: access
          image: mikesir87/ldschurch-stream-access:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: access-config

---
apiVersion: v1
kind: Service
metadata:
  name: access-service
  namespace: ldschurch-stream
spec:
  selector:
    app: access
  ports:
    - port: 80
      targetPort: 80
