k8s/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  namespace: ldschurch-stream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: mikesir87/ldschurch-stream-dashboard:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: dashboard-config

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: ldschurch-stream
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 80
