k8s/landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-deployment
  namespace: ldschurch-stream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: mikesir87/ldschurch-stream-landing:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  namespace: ldschurch-stream
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: 80
